# ai-based-job-matching

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  err.txt  kerjacerdas.db  package-lock.json  pyproject.toml  requirements.txt
config/: __init__.py  agents.yaml  ml_config.yaml  settings.py
docs/: API_SPEC.md  DEMO_SCRIPT.md  FEASIBILITY_REPORT.md  ML_PIPELINE.md  PRD.md  VERIFICATION_DEMO.md
scripts/: seed_data.py
src/: __init__.py
src/agents/: README.md  __init__.py  advisor_agent.py  data_agent.py  matching_agent.py  orchestrator.py  skill_gap_agent.py
src/api/: README.md  __init__.py  database.py  dependencies.py  main.py  models.py
src/api/routers/: auth.py  employer.py  seeker.py
src/api/schemas/: auth.py  employer.py  seeker.py
src/api/services/: auth_service.py  identity_verifier.py  zk_verifier.py
src/frontend/: README.md  index.html  kerjacerdas.jsx  package-lock.json  package.json  tailwind.config.js
src/frontend/src/: App.jsx  index.css  main.jsx
src/frontend/src/components/: AdvisorChat.jsx  AuthModal.jsx  DashboardPage.jsx  EmployerDashboard.jsx  Footer.jsx  Header.jsx  JobCard.jsx  LandingHero.jsx  PrivacyPolicyPage.jsx  SavedJobsPage.jsx  SearchForm.jsx  SkillGapPanel.jsx  (+1 more)
src/ml/: __init__.py
src/ml/models/: __init__.py  bert_matcher.py  recommender.py  skill_embedder.py
src/ml/pipeline/: 01_ingest.py  02_preprocess.py  03_feature_eng.py  04_train.py  05_evaluate.py  06_deploy.py  __init__.py
src/ml/registry/: __init__.py
tests/: __init__.py
tests/unit/: __init__.py  test_api.py  test_ml.py
(+2 files in other folders)
